2007-12-07  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Merged from trunk:

	* app/display/gimpdisplayshell-draw.c: draw grid correctly when
	non-integer spacing is combined with a large offset.  Fixes
	bug #502374.

	* app/core/gimpimage-snap.c: make snapping to grid work when
	coord is less than the grid offset.

2007-12-07  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* configure.in: fixed indentation of --help output.

2007-12-07  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/pygimp/pygimp-colors.c
	* plug-ins/pygimp/gimpcolormodule.c: removed calls to PyMem_Free().

2007-12-07  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/pygimp/plug-ins/foggify.py: push/pop a context instead
	of manually restoring the background color.

2007-12-07  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/batch.c (batch_run): only show the message about using the
	default batch interpreter when running in verbose mode.

2007-12-05  Martin Nordholts  <martinn@svn.gnome.org>

	Merged from trunk:

	* app/actions/tool-options-commands.c
	(tool_options_save_to_cmd_callback)
	(tool_options_restore_from_cmd_callback): Only care about
	GIMP_CONFIG_PARAM_SERIALIZE properties, fixes bug #498948.

2007-12-04  Michael Natterer  <mitch@gimp.org>

	Merged from trunk:

	* app/core/gimpdrawable.[ch]: added new API
	gimp_drawable_estimate_memsize() and virtual function
	GimpDrawable::estimate_memsize() which estimate the memsize of a
	drawable after scaling/resizing.

	* app/core/gimplayer.c: implement the virtual function and take
	the layer mask into account.

	* app/core/gimpimage-item-list.[ch] (gimp_image_item_list_get_list):
	added const qualifiers.

	* app/core/gimpimage-scale.c (gimp_image_scale_check): use the new
	function to correctly estimate the new size instead of scaling the
	drawables' memsizes including all constant parts. Fixes bug #329468.

2007-12-02  Sven Neumann  <sven@gimp.org>

	Merged from trunk:
